<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LibraryActivity">

    <LinearLayout
        android:id="@+id/conteneur_principale"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/activity_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="center"
            android:text="@string/library"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/library_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin"
            android:layout_weight="1"
            android:cacheColorHint="@color/light_brown"
            android:listSelector="@color/brown" />

        <LinearLayout
            android:id="@+id/conteneur_boutons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/new_book"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_weight="1"
                android:text="@string/new_book" />

            <Button
                android:id="@+id/modify_book"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_weight="1"
                android:text="@string/modify_book" />

            <Button
                android:id="@+id/delete_book"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_weight="1"
                android:text="@string/delete_book" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>